<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ls01g</name>
  <version>0.2.0</version>
  <description>The ls01g laser package</description>

  <maintainer email="yutong@todo.todo">yutong previous maintainer</maintainer>

  <maintainer email="dony.uzbguy@gmail.com">ADAMBAEV DONIYORBEK</maintainer>

  <author>the first author yutong</author>
  <author>the second author ADAMBAEV DONIYORBEK converted ROS1 to ROS2</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
