<?xml version="1.0"?>
<package format="3">
  <name>racecar_driver_hardware</name>
  <version>0.1.0</version>
  <description>The racecar_driver_hardware_interface package for ROS2</description>

  <maintainer email="dony.uzbguy@gmail.com">zn</maintainer>

   <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/share/${PROJECT_NAME}/racecar_system_interface.xml"/>
  </export>
</package>
