<?xml version="1.0"?>
<package format="3">
  <name>art_driver</name>
  <version>0.2.0</version>
  <description>The art_driver package for ROS2</description>

  <maintainer email="zhangnan@artrobot.com">zn previous maintainer</maintainer>

  <maintainer email="dony.uzbguy@gmail.com">ADAMBAEV DONIYORBEK current maintainer</maintainer>

  <author>the first author Steven Zhang</author>
  <author>the second author ADAMBAEV DONIYORBEK converted ROS1 to ROS2</author>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
